Browser task and tag linking fixed ; alignment to be done on browser notes

--- a/app/src/views/stylesheets/index.styl
+++ b/app/src/views/stylesheets/index.styl
@@ -874,10 +874,11 @@ body
 								white-space nowrap
 								width 1%
 								button
-									padding-right .5em
+									padding 0 .5em 0 0
 							.input
 								input
 									width 100%
+									text-overflow ellipsis
 									border none
 									background none
 									color white
